--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>John Carroll | Crystal Collector</title>
-		<!-- yo -->
+		<title>Crystal Collector</title>
 		<!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
 		<!-- Optional theme -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-		<link rel="stylesheet" type="text/css" href="./css/style.css">
+		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-		<script type="text/javascript" src="./javascript/game.js"></script>
+		<script type="text/javascript" src="assets/javascript/game.js"></script>
 	</head>
 	<body>
 		<div class="container">	
@@ -61,10 +60,10 @@
 				<div class="col-md-12 col-xs-12">
 					<div class="text-center">
 						<div id="gem-buttons" class="boxed">
-							<img src="./images/blue-gem.png" id="blue-gem" class="gem-buttons">
-							<img src="./images/clear-gem.png" id="clear-gem" class="gem-buttons">
-							<img src="./images/red-gem.png" id="red-gem" class="gem-buttons">
-							<img src="./images/green-gem.png" id="green-gem" class="gem-buttons">
+							<img src="assets/images/blue-gem.png" id="blue-gem" class="gem-buttons">
+							<img src="assets/images/clear-gem.png" id="clear-gem" class="gem-buttons">
+							<img src="assets/images/red-gem.png" id="red-gem" class="gem-buttons">
+							<img src="assets/images/green-gem.png" id="green-gem" class="gem-buttons">
 						</div>
 					</div>
 				</div>
